--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,6 +6,13 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
+# Conferences and seminars
+## 2019
+Research Seminars Series: "Generative adversarial networks in marketing: Overcoming privacy concerns by generating artificial data", Paper presented by J.E. Wieringa at the Wirtschatsuniversität Wien (Austria), November 2019.
+RUGCIC Seminar, "Generative adversarial networks in marketing: Overcoming privacy concerns by generating artificial data", Putten (The Netherlands), May 2019.
+
+## 2018
+[SatRday](https://amsterdam2018.satrdays.org/), "Scraping the internet with R", Uber Amsterdam (The Netherlands), September 2018.
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
